--- a/less/home-page.less
+++ b/less/home-page.less
@@ -42,6 +42,7 @@
       @media @phone{
         width: 95%;
         margin: 73px 2.5%;
+        margin-bottom: 0;
       }
     }
   
@@ -114,6 +115,7 @@
       // border: 1px solid red;
       width: 96%;
       padding: 0;
+      margin-top: 0;
       display: flex;
       justify-content: center;
       flex-direction: column-reverse;
